# sensorpi

./: README.md  README.org  config.edn  pyproject.toml
sensorpi/: __init__.py  __main__.py  camera.py  config.edn  dht11.py  ds18b20.py  tsl2591.py
sensorpi/sensors/: bme280.py  bmp280.py  camera.py  dht11.py  ds18b20.py  handler.py  tsl2591.py
tests/: test_sensorpi.py
