[tool.poetry]
name = "sensorpi"
version = "0.1.4"
description = "A Raspberry Pi tool to send multiple sensor data to an influxdb Database"
authors = ["Nikolai Weidt <weidtn@gmail.com>"]
maintainers = ["Nikolai Weidt <weidtn@gmail.com>"]
license = "MPL-2.0"
readme = "README.org"
repository = "https://github.com/weidtn/sensorpi/"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22"
pandas = "^1.4"
opencv-python-headless = "4.5.5.62"
# sudo apt install libaom0 libatlas3-base libavcodec58 libavformat58 libavutil56 libbluray2 libcairo2 libchromaprint1 libcodec2-0.8.1 libcroco3 libdatrie1 libdrm2 libfontconfig1 libgdk-pixbuf2.0-0 libgfortran5 libgme0 libgraphite2-3 libgsm1 libharfbuzz0b libjbig0 libmp3lame0 libmpg123-0 libogg0 libopenjp2-7 libopenmpt0 libopus0 libpango-1.0-0 libpangocairo-1.0-0 libpangoft2-1.0-0 libpixman-1-0 librsvg2-2 libshine3 libsnappy1v5 libsoxr0 libspeex1 libssh-gcrypt-4 libswresample3 libswscale5 libthai0 libtheora0 libtiff5 libtwolame0 libva-drm2 libva-x11-2 libva2 libvdpau1 libvorbis0a libvorbisenc2 libvorbisfile3 libvpx5 libwavpack1 libwebp6 libwebpmux3 libx264-155 libx265-165 libxcb-render0 libxcb-shm0 libxfixes3 libxrender1 libxvidcore4 libzvbi0
picamera = "1.13"
influxdb-client = {extras = ["ciso"], version = "^1.25"}
adafruit-circuitpython-tsl2591 = "^1.3.2"
adafruit-circuitpython-dht = "^3.7.1"
adafruit-circuitpython-bme280 = "^2.6"
adafruit-circuitpython-bmp280 =  "^3.2"
edn_format = "^0.7"
sysv-ipc = "^1.1" # maybe needed for fixing DHT11 (at least one bug)

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-lsp-server = {extras = ["all"], version = "^1.3.3"}

[tool.poetry.scripts]
run =  "sensorpi.__main__:main_with_prompt"
sensorpi =  "sensorpi.__main__:main_with_prompt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/weidtn/sensorpi/issues"
